# wasm-in-script-api

./: .envrc  .gitignore  Cargo.toml  README.md  config.json  dprint.json  flake.nix  justfile
packs/BP/: manifest.json
packs/BP/texts/: en_US.lang
packs/RP/: manifest.json
packs/RP/texts/: en_US.lang  languages.json
packs/data/gametests/: package-lock.json  package.json  tsconfig.json  uuid.txt
packs/data/gametests/src/: global.d.ts  main.ts
src/: js.rs  lib.rs
